# CoDiPack

./: .astylerc  .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  LICENSE-other  Makefile  README.md  TODO.txt
cmake/: codipack-config-version.cmake  codipack-config.cmake  codipack-include.cmake
documentation/: Changelog.md  CoDiLayout.xml  Tutorial1.md  Tutorial2.md  Tutorial3.md  Tutorial4.md  Tutorial5.md  Tutorial6.md  Tutorial7.md  Tutorial7_1.md  Tutorial7_2.md  Tutorial8.md  Tutorial9.md  TutorialA1.md  TutorialA2.md  TutorialA3.md  TutorialA4.md  TutorialA4_1.md  TutorialA5.md  TutorialB1.md  TutorialB1_1.md  TutorialB1_2.md  TutorialB2.md  Tutorials.md  doc.css  evaluator-test11.cpp  evaluator-test14.cpp  evaluator-test17.cpp  footer.html  header.html  mainpage.md  settings.sty  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp  tutorial7_1.cpp  (+13 more)
event-tests/: Makefile
include/: activeReal.hpp  adjointInterface.hpp  adjointInterfaceImpl.hpp  binaryExpression.tpp  codi.hpp  configure.h  evaluateDefinitions.hpp  exceptions.hpp  expressionHandle.hpp  expressionTraits.hpp  expressions.h  expressions.hpp  externalFunctions.hpp  instantiation.hpp  macros.h  numericLimits.hpp  referenceActiveReal.hpp  tapeTypes.hpp  typeFunctions.hpp  typeTraits.hpp  unaryExpression.tpp  unaryExpressionExtended.tpp
patches/: variadicDataChunk.patch
tests/: Makefile  Makefile.deriv1stOrder  Makefile.deriv2ndOrder  Makefile.drivers  Makefile.primal  compare.cpp  (+1 more)
(+1585 files in other folders)
